--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "dev:animations": "ng build @ng-vcl/animations --watch",
     "dev:jss-form": "ng build @ng-vcl/jss-form --watch",
     "dev:wc": "ng serve ng-vcl-wc-test --plugin ~webpack.custom.js",
-    "docs": "npm-run-all docs:clean docs:pull-current docs:build",
-    "docs:build": "cross-env GIT_BRANCH=$TRAVIS_BRANCH ng build --plugin ~webpack.custom.js",
+    "docs": "npm-run-all docs:clean-all docs:pull-current docs:clean-branch docs:build",
+    "docs:build": "cross-env GIT_BRANCH=$TRAVIS_BRANCH ng build --prod --plugin ~webpack.custom.js",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
-    "docs:clean": "rimraf docs",
+    "docs:clean-branch": "rimraf docs/$(git rev-parse --abbrev-ref HEAD)",
+    "docs:clean-all": "rimraf docs",
     "docs:lint": "ng lint ng-vcl-demo",
-    "docs:pull-current": "npm run docs:clean && git clone -b gh-pages --single-branch https://github.com/ng-vcl/ng-vcl.git docs",
+    "docs:pull-current": "git clone -b gh-pages --single-branch https://github.com/ng-vcl/ng-vcl.git docs",
     "test:ng-vcl": "ng test @ng-vcl/ng-vcl --watch=false",
     "test:animations": "ng test @ng-vcl/animations --watch=false",
     "test:jss-form": "ng test @ng-vcl/jss-form --watch=false",
