--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@vcl/breakpoints": "^0.4.2",
     "@vcl/core-modules": "^0.4.2",
     "@vcl/font-awesome": "^0.4.2",
+    "@vcl/material-design-icons": "^0.4.2",
     "@vcl/theme": "^0.4.2",
     "core-js": "^3.1.4",
     "document-register-element": "1.13.2",
