--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-vcl",
-  "version": "0.9.0-1",
+  "version": "0.9.0-2",
   "scripts": {
     "ng": "ng",
     "start": "npm run dev:demo",
@@ -81,6 +81,7 @@
     "@vcl/preprocessor": "^0.4.2",
     "codelyzer": "~5.1.0",
     "cross-env": "^5.2.0",
+    "cz-conventional-changelog": "^2.1.0",
     "git-directory-deploy": "^1.5.1",
     "highlight-loader": "^0.7.3",
     "jasmine-core": "^3.4.0",
@@ -90,6 +91,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "lerna": "^3.15.0",
     "markdown-loader": "^5.0.0",
     "ng-packagr": "^5.3.0",
     "npm-run-all": "^4.1.5",
@@ -98,5 +100,10 @@
     "tsickle": "0.35.0",
     "tslint": "^5.17.0",
     "typescript": "^3.4.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
