--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-vcl",
-  "version": "0.9.0-3",
+  "version": "0.9.0",
   "scripts": {
     "ng": "ng",
     "start": "npm run dev:demo",
@@ -100,5 +100,10 @@
     "tsickle": "0.35.0",
     "tslint": "^5.17.0",
     "typescript": "^3.4.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
