--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "clean": "npm-run-all build:clean docs:clean",
     "markdownlint": "markdownlint -c markdownlint.json lib/",
     "publish": "cd dist/ng-vcl/ng-vcl && npm publish",
-    "publish:next": "cd dist/ng-vcl/ng-vcl && npm publish --tag next"
+    "publish:next": "cd dist/ng-vcl/ng-vcl && npm publish --tag next",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
     "@angular/animations": "^8.1.2",
@@ -67,6 +68,7 @@
     "@types/node": "^12.6.8",
     "@vcl/preprocessor": "^0.4.5",
     "codelyzer": "~5.1.0",
+    "conventional-changelog-cli": "^2.0.23",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^3.0.2",
     "git-directory-deploy": "^1.5.1",
