--- a/package.json
+++ b/package.json
@@ -40,19 +40,13 @@
     "@angular/platform-browser": "^8.2.4",
     "@angular/platform-browser-dynamic": "^8.2.4",
     "@angular/router": "^8.2.4",
-    "@vcl/breakpoints": "^0.5.3",
-    "@vcl/core-modules": "^0.5.4",
-    "@vcl/font-awesome": "^0.5.3",
-    "@vcl/material-design-icons": "^0.5.3",
-    "@vcl/material-style-inputs": "^0.5.3",
-    "@vcl/theme": "^0.5.3",
+    "@vcl/vcl": "^0.6.0-2",
     "core-js": "^3.2.1",
     "document-register-element": "1.14.3",
     "fuse.js": "^3.4.5",
     "hammerjs": "^2.0.8",
     "jsonschema": "^1.2.4",
     "ngx-build-plus": "^8.1.4",
-    "normalize.css": "^8.0.1",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
