--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-vcl",
-  "version": "0.10.0-2",
+  "version": "0.10.0",
   "scripts": {
     "ng": "ng",
     "start": "npm run dev:demo",
@@ -30,41 +30,41 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^8.2.4",
+    "@angular/animations": "^8.2.5",
     "@angular/cdk": "^8.1.4",
-    "@angular/common": "^8.2.4",
-    "@angular/compiler": "^8.2.4",
-    "@angular/core": "^8.2.4",
-    "@angular/elements": "^8.2.4",
-    "@angular/forms": "^8.2.4",
-    "@angular/platform-browser": "^8.2.4",
-    "@angular/platform-browser-dynamic": "^8.2.4",
-    "@angular/router": "^8.2.4",
-    "@vcl/vcl": "^0.6.0-4",
+    "@angular/common": "^8.2.5",
+    "@angular/compiler": "^8.2.5",
+    "@angular/core": "^8.2.5",
+    "@angular/elements": "^8.2.5",
+    "@angular/forms": "^8.2.5",
+    "@angular/platform-browser": "^8.2.5",
+    "@angular/platform-browser-dynamic": "^8.2.5",
+    "@angular/router": "^8.2.5",
+    "@vcl/vcl": "^0.6.2",
     "core-js": "^3.2.1",
     "document-register-element": "1.14.3",
     "fuse.js": "^3.4.5",
     "hammerjs": "^2.0.8",
     "jsonschema": "^1.2.4",
     "ngx-build-plus": "^8.1.4",
-    "rxjs": "~6.5.2",
+    "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.2",
-    "@angular-devkit/build-ng-packagr": "^0.803.2",
-    "@angular/cli": "^8.3.2",
-    "@angular/compiler-cli": "^8.2.4",
-    "@angular/language-service": "^8.2.4",
-    "@ng-vcl/webpack-helper": "^0.1.3",
+    "@angular-devkit/build-angular": "^0.803.3",
+    "@angular-devkit/build-ng-packagr": "^0.803.3",
+    "@angular/cli": "^8.3.3",
+    "@angular/compiler-cli": "^8.2.5",
+    "@angular/language-service": "^8.2.5",
     "@types/jasmine": "^3.4.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.7.3",
-    "@vcl/preprocessor": "^0.5.3",
+    "@types/node": "^12.7.4",
+    "@vcl/preprocessor": "^0.6.2",
     "codelyzer": "~5.1.0",
     "conventional-changelog-cli": "^2.0.23",
     "cross-env": "^5.2.1",
+    "css-loader": "^3.2.0",
     "cz-conventional-changelog": "^3.0.2",
     "git-directory-deploy": "^1.5.1",
     "highlight-loader": "^0.7.3",
@@ -83,7 +83,8 @@
     "ts-node": "^8.3.0",
     "tsickle": "0.37.0",
     "tslint": "^5.19.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "webpack-merge": "^4.2.2"
   },
   "config": {
     "commitizen": {
