--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
       - dev
-
+      
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,13 +15,21 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Node $
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Node ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: $
+          node-version: ${{ matrix.node-version }}
 
-      - name: install, build and deploy
-        run: |
-          npm ci
-          npm run docs:
-          npm run docs:deploy 
+          - name: install, build and deploy
+          run: |
+            npm ci
+            npm run docs:
+            npm run docs:deploy 
