--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
       - name: install, build and deploy
         run: |
           npm ci
-          npm run docs:
+          npm run docs
           npm run docs:deploy
