--- a/lib/ng-vcl/package.json
+++ b/lib/ng-vcl/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ng-vcl/ng-vcl",
-  "version": "0.11.0-alpha.5",
-  "description": "A comprehensive library of components for Angular 8+ with VCL based styling",
+  "version": "1.0.0-beta.1",
+  "description": "A comprehensive library of components for Angular 9+ with VCL based styling",
   "repository": {
     "type": "git",
     "url": "https://github.com/ng-vcl/ng-vcl.git"
