--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-vcl",
-  "version": "0.11.0-alpha.5",
+  "version": "1.0.0-beta.1",
   "scripts": {
     "ng": "ng",
     "start": "npm run dev:demo",
