--- a/package.json
+++ b/package.json
@@ -30,64 +30,66 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^16.2.1",
+    "@angular/animations": "^16.2.12",
     "@angular/cdk": "^15.2.9",
-    "@angular/common": "^16.2.1",
-    "@angular/compiler": "^16.2.1",
-    "@angular/core": "^16.2.1",
-    "@angular/elements": "^16.2.1",
-    "@angular/forms": "^16.2.1",
-    "@angular/platform-browser": "^16.2.1",
-    "@angular/platform-browser-dynamic": "^16.2.1",
-    "@angular/router": "^16.2.1",
-    "@fortawesome/fontawesome-free": "^6.3.0",
-    "@mdi/font": "^7.1.96",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/elements": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@mdi/font": "^7.3.67",
+    "@types/marked": "^6.0.0",
     "@vcl/vcl": "^3.0.0",
-    "core-js": "^3.28.0",
+    "core-js": "^3.33.2",
     "document-register-element": "^1.14.10",
     "fuse.js": "^6.6.2",
     "hammerjs": "^2.0.8",
     "jsonschema": "^1.4.1",
-    "ngx-markdown": "^15.1.1",
+    "marked": "^9.1.5",
+    "ngx-markdown": "^15.1.2",
     "normalize.css": "^8.0.1",
     "raw-loader": "^4.0.2",
-    "rxjs": "^7.8.0",
-    "sass": "^1.58.3",
-    "sass-loader": "^13.0.2",
-    "tslib": "^2.5.0",
+    "rxjs": "^7.8.1",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "tslib": "^2.6.2",
     "zone.js": "^0.13.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.9",
     "@angular-devkit/core": "^16.2.9",
     "@angular/cli": "^16.2.9",
-    "@angular/compiler-cli": "^16.2.1",
-    "@angular/language-service": "^16.2.1",
-    "@types/jasmine": "^4.3.1",
-    "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^18.14.0",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/language-service": "^16.2.12",
+    "@types/jasmine": "^4.6.1",
+    "@types/jasminewd2": "~2.0.12",
+    "@types/node": "^18.18.8",
     "codelyzer": "^6.0.2",
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.3",
+    "css-loader": "^6.8.1",
     "cz-conventional-changelog": "^3.3.0",
     "git-directory-deploy": "^1.5.1",
-    "jasmine-core": "^4.3.0",
+    "jasmine-core": "^4.6.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.4.0",
-    "karma-chrome-launcher": "^3.1.1",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "2.0.0",
-    "lerna": "^6.5.1",
-    "ng-packagr": "^16.2.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "lerna": "^6.6.2",
+    "ng-packagr": "^16.2.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.8",
     "protractor": "^7.0.0",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.9.3",
-    "webpack": "^5.74.0"
+    "typescript": "^4.9.5",
+    "webpack": "^5.89.0"
   },
   "config": {
     "commitizen": {
