--- a/package.json
+++ b/package.json
@@ -30,65 +30,65 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^19.2.8",
-    "@angular/cdk": "^19.2.11",
-    "@angular/common": "^19.2.8",
-    "@angular/compiler": "^19.2.8",
-    "@angular/core": "^19.2.8",
-    "@angular/elements": "^19.2.8",
-    "@angular/forms": "^19.2.8",
-    "@angular/platform-browser": "^19.2.8",
-    "@angular/platform-browser-dynamic": "^19.2.8",
-    "@angular/router": "^19.2.8",
-    "@fortawesome/fontawesome-free": "^6.7.1",
+    "@angular/animations": "^20.0.0",
+    "@angular/cdk": "^20.0.0",
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/elements": "^20.0.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/platform-browser-dynamic": "^20.0.0",
+    "@angular/router": "^20.0.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@mdi/font": "^7.4.47",
     "@types/marked": "^6.0.0",
     "@vcl/vcl": "^3.3.0",
-    "core-js": "^3.39.0",
+    "core-js": "^3.42.0",
     "document-register-element": "^1.14.10",
-    "fuse.js": "^7.0.0",
+    "fuse.js": "^7.1.0",
     "hammerjs": "^2.0.8",
-    "jsonschema": "^1.4.1",
-    "marked": "^15.0.3",
-    "ngx-markdown": "^19.0.0",
+    "jsonschema": "^1.5.0",
+    "marked": "^15.0.12",
+    "ngx-markdown": "^20.0.0",
     "normalize.css": "^8.0.1",
     "raw-loader": "^4.0.2",
-    "rxjs": "^7.8.1",
-    "sass": "^1.82.0",
+    "rxjs": "^7.8.2",
+    "sass": "^1.89.1",
     "sass-loader": "^16.0.4",
     "tslib": "^2.8.1",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.9",
-    "@angular-devkit/core": "^19.2.9",
-    "@angular/cli": "^19.2.9",
-    "@angular/compiler-cli": "^19.2.8",
-    "@angular/language-service": "^19.2.8",
-    "@types/jasmine": "^5.1.5",
+    "@angular-devkit/build-angular": "^20.0.0",
+    "@angular-devkit/core": "^20.0.0",
+    "@angular/cli": "^20.0.0",
+    "@angular/compiler-cli": "^20.0.0",
+    "@angular/language-service": "^20.0.0",
+    "@types/jasmine": "^5.1.8",
     "@types/jasminewd2": "~2.0.13",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.15.29",
     "codelyzer": "^6.0.2",
     "conventional-changelog-cli": "^5.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "cz-conventional-changelog": "^3.3.0",
     "git-directory-deploy": "^1.5.1",
-    "jasmine-core": "^5.5.0",
+    "jasmine-core": "^5.7.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
-    "lerna": "^8.1.9",
-    "ng-packagr": "^19.0.1",
+    "lerna": "^8.2.2",
+    "ng-packagr": "^20.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
-    "typescript": "^5.6.3",
-    "webpack": "^5.97.1"
+    "typescript": "^5.8.3",
+    "webpack": "^5.99.9"
   },
   "config": {
     "commitizen": {
