--- a/lib/ng-vcl/package.json
+++ b/lib/ng-vcl/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vcl/ng-vcl",
-  "version": "3.3.0",
+  "version": "3.4.0",
   "description": "A comprehensive library of components for Angular with VCL based styling",
   "repository": {
     "type": "git",
@@ -9,12 +9,12 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "peerDependencies": {
-    "@angular/cdk": "^18.2.5",
-    "@angular/common": "^18.2.5",
-    "@angular/animations": "^18.2.5",
-    "@angular/core": "^18.2.5",
-    "@angular/forms": "^18.2.5",
-    "@angular/router": "^18.2.5",
+    "@angular/cdk": "20.2.10",
+    "@angular/common": "^20.3.7",
+    "@angular/animations": "^20.3.7",
+    "@angular/core": "^20.3.7",
+    "@angular/forms": "^20.3.7",
+    "@angular/router": "^20.3.7",
     "rxjs": "^7.8.1"
   }
 }
